add: Adding the new arrays for the forge

--- a/pack.conf
+++ b/pack.conf
@@ -1,5 +1,39 @@
+# Directories array
 DIRECTORIES=(
         "$HOME/.themes"
         "$HOME/.icons"
         "$HOME/.fonts"
+)
+
+# System utilities
+UTILS=(
+        btop
+        htop
+        fzf
+        fastfetch
+        stow
+        nvidia-settings
+        wireshark
+        nvidia-smi
+        gparted
+)
+
+# For programming
+PROGRAMMING=(
+        neovim
+        tmux
+        alacritty
+        bat
+)
+
+# For media
+MEDIA=(
+        vlc
+        gimp
+        audacity
+)
+
+# Tweaks
+DESK=(
+        gnome-tweaks
 )
