change: A little change of the arrays names

--- a/pack.conf
+++ b/pack.conf
@@ -27,13 +27,13 @@ PROGRAMMING=(
 )
 
 # For media
-MEDIA=(
+MEDIA_UTILS=(
         vlc
         gimp
         audacity
 )
 
 # Tweaks
-DESK=(
+DESK_UTILS=(
         gnome-tweaks
 )
